k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-deployment
  namespace: expense
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expense
  template:
    metadata:
      labels:
        app: expense
    spec:
      containers:
        - name: expense-container
          image: rakshitsen/expense:tag
          ports:
            - containerPort: 3000
          # env:
          #   - name: PORT
          #     value: "3000"
          #   - name: MONGO_URL
          #     value: "mongodb://mongo:27017"
          #   - name: DB_NAME
          #     value: "project"
          #   - name: COLLECTION_NAME
          #     value: "expense"
