k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  namespace: expense
spec:
  serviceName: "mongo-service"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-storage 
              mountPath: /data/db
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - db.adminCommand('ping')
            initialDelaySeconds: 30
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: mongo-storage 
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard 
        resources:
          requests:
            storage: 1Gi
