k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: expense-service
  namespace: expense
  labels:
    app: expense
spec:
  selector:
    app: expense
  ports:
    - protocol: TCP
      port: 3000       # The port exposed inside the cluster
      targetPort: 3000 # The port the container listens on
  type: ClusterIP
