k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: expense
spec:
  clusterIP: None   # headless
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
